2024 update! We lost .pn :(

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
 	<link rel="mask-icon" href="./safari-pinned-tab.svg" color="#000">
 	<link rel="preconnect" href="https://cdn.avl.la" crossorigin>
-	<link rel="stylesheet" href="./style.css?v3">
+	<link rel="stylesheet" href="./style.css?v4">
 </head>
 <body>
 	<header>
@@ -123,22 +123,6 @@
 						</td>
 						<td>2013<a href="#ref5">[5]</a></td>
 					</tr>
-					<tr class="alive">
-						<td>Pitcairn Islands (UK)</td>
-						<td>.pn</td>
-						<td><a href="http://pn./">http://pn/</a></td>
-						<td><a href="http://139.162.17.173/">139.162.17.173</a></td>
-						<td>No</td>
-						<td>
-							<dl>
-								<dt>HTTP</dt>
-								<dd>Configuration page (<a href="http://pitcairn.net.pn/">pitcairn.net.pn</a> mirror)</dd>
-								<dt>HTTPS</dt>
-								<dd>400 Bad Request</dd>
-							</dl>
-						</td>
-						<td>Aug. 2021</td>
-					</tr>
 					<tr>
 						<td>Tokelau (NZ)</td>
 						<td>.tk</td>
@@ -203,7 +187,7 @@
 				</tbody>
 			</table>
 		</section>
-		<p class="timestamp">Last checked: 21 Aug. 2023.</p>
+		<p class="timestamp">Last checked: 10 Jan. 2024.</p>
 		<h4>
 			<a id="aaaaa-screenshots" href="#aaaaa-screenshots">#</a>
 			Screenshots
@@ -232,14 +216,6 @@
 				</a>
 				<figcaption data-llb-caption="visible">
 					<b>cm:22</b> as of 21 Aug. 2023.
-				</figcaption>
-			</figure>
-			<figure>
-				<a href="./screenshots/2023-08-21_pn.png" data-llb-src="href" data-llb-gallery>
-					<img src="./screenshots/2023-08-21_pn.png">
-				</a>
-				<figcaption data-llb-caption="visible">
-					<b>http://pn/</b> as of 13 Aug. 2021.
 				</figcaption>
 			</figure>
 			<figure>
@@ -297,7 +273,7 @@
 				</tbody>
 			</table>
 		</section>
-		<p class="timestamp">Last checked: 21 Aug. 2023.</p>
+		<p class="timestamp">Last checked: 10 Jan. 2024.</p>
 		<h3>
 			<a id="aaaaa-historical" href="#aaaaa-historical">#</a>
 			Historical
@@ -314,7 +290,7 @@
 					<th>URL</th>
 					<th>IP<br>(A/AAAA)</th>
 					<th>Email server<br>(MX)</th>
-					<th>Last known<br>working date</th>
+					<th>Known<br>working date</th>
 				</thead>
 				<tbody class="td-last-center">
 					<tr>
@@ -332,7 +308,7 @@
 						<td><a href="http://88.201.27.211/">88.201.27.211</a><br>
 							<a href="http://10.10.10.10/">10.10.10.10</a></td>
 						<td>No</td>
-						<td>Jan. 2022</td>
+						<td>Aug. 2021—<br>Jan. 2022</td>
 					</tr>
 					<tr>
 						<td>Denmark</td>
@@ -352,7 +328,7 @@
 						<td>2013<a href="#ref5">[5]</a></td>
 					</tr>
 					<tr>
-						<td>British Indian Ocean Territory (UK)</td>
+						<td>British Indian<br>Ocean Territory (UK)</td>
 						<td>.io</td>
 						<td>http://io/</td>
 						<td><a href="http://193.223.78.212/">193.223.78.212</a></td>
@@ -374,6 +350,14 @@
 						<td><a href="http://203.223.32.21/">203.223.32.21</a></td>
 						<td>ns1.dns.net.kh</td>
 						<td>2013<a href="#ref5">[5]</a></td>
+					</tr>
+					<tr>
+						<td>Pitcairn Islands (UK)</td>
+						<td>.pn</td>
+						<td>http://pn/</td>
+						<td><a href="http://139.162.17.173/">139.162.17.173</a></td>
+						<td>No</td>
+						<td>Aug. 2021—<br>Aug. 2023</td>
 					</tr>
 					<tr>
 						<td>Saint Helena (UK)</td>
@@ -421,6 +405,14 @@
 				</a>
 				<figcaption data-llb-caption="visible">
 					<b>http://bh/</b> on 13 Aug. 2021.
+				</figcaption>
+			</figure>
+			<figure>
+				<a href="./screenshots/2023-08-21_pn.png" data-llb-src="href">
+					<img src="./screenshots/2023-08-21_pn.png">
+				</a>
+				<figcaption data-llb-caption="visible">
+					<b>http://pn/</b> on 21 Aug. 2023.
 				</figcaption>
 			</figure>
 		</section>
@@ -525,7 +517,7 @@
 				</tbody>
 			</table>
 		</section>
-		<p class="timestamp">Last checked: 21 Aug. 2023.</p>
+		<p class="timestamp">Last checked: 10 Jan. 2024.</p>
 		<h3>
 			<a id="mx-historical" href="#mx-historical">#</a>
 			Historical
@@ -540,7 +532,7 @@
 					<th>Territory</th>
 					<th>ccTLD</th>
 					<th>Email server<br>(MX)</th>
-					<th>Last known<br>working date</th>
+					<th>Known<br>working date</th>
 				</thead>
 				<tbody class="td-last-center">
 					<tr>
@@ -559,7 +551,7 @@
 						<td>Cambodia</td>
 						<td>.kh</td>
 						<td>ns1.dns.net.kh</td>
-						<td>Oct. 2022</td>
+						<td>Jan. 2022—<br>Oct. 2022</td>
 					</tr>
 					<tr>
 						<td>Philippines</td>
@@ -569,7 +561,7 @@
 							mx3.sendnow.ph<br>
 							mx4.sendnow.ph<br>
 							mx5.sendnow.ph</td>
-						<td>Oct. 2022</td>
+						<td>Aug. 2021—<br>Oct. 2022</td>
 					</tr>
 					<tr>
 						<td>Vatican</td>
