--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 				</ol>
 			</li>
 			<li><a href="#bonus">Bonus: Dotless Dot?</a></li>
+			<li><a href="#updates">Updates</a></li>
 			<li><a href="#special-thanks">Special Thanks</a></li>
 			<li><a href="#references">References</a></li>
 		</ol>
@@ -133,6 +134,26 @@
 						</td>
 						<td>2013</td>
 					</tr>
+					<tr class="no-content">
+						<td>Mongolia</td>
+						<td>.мон<br><small>(.xn--l1acc)</small></td>
+						<td><a href="https://мон./">https://мон./</a></td>
+						<td>
+							<a href="http://180.149.98.234/">180.149.98.234</a><br>
+							<a href="http://202.131.4.60/">202.131.4.60</a><br>
+							<a href="http://218.100.84.27/">218.100.84.27</a>
+						</td>
+						<td>No</td>
+						<td>
+							<dl>
+								<dt>HTTP/S</dt>
+								<dd>Apache 2 Test Page</dd>
+								<dt>Other</dt>
+								<dd>SSH open</dd>
+							</dl>
+						</td>
+						<td>May 2025</td>
+					</tr>
 					<tr>
 						<td>Tokelau (NZ)</td>
 						<td>.tk</td>
@@ -182,7 +203,7 @@
 				</tbody>
 			</table>
 		</section>
-		<p class="timestamp">Last checked: 31 Mar. 2025.</p>
+		<p class="timestamp">Last checked: 12 May 2025.</p>
 		<h4>
 			<a id="aaaaa-screenshots" href="#aaaaa-screenshots">#</a>
 			Screenshots
@@ -194,6 +215,15 @@
 				</a>
 				<figcaption data-llb-caption="visible">
 					<b>cm:22</b> as of 21 Aug. 2023.
+				</figcaption>
+			</figure>
+			<figure>
+				<a href="./screenshots/2025-05-12_xn-l1acc.png" data-llb-src="href" data-llb-gallery>
+					<img src="./screenshots/2025-05-12_xn-l1acc.png">
+				</a>
+				<figcaption data-llb-caption="visible">
+					<b>https://мон/</b> as of 12 May 2025.<br>
+					(Apache 2 Test Page)
 				</figcaption>
 			</figure>
 			<figure>
@@ -225,14 +255,14 @@
 			requiring new TLDs to include a few apex DNS records on their TLDs for at
 			least 90 days.<a href="#ref4">[4]</a>
 		</p>
-		<!-- <p>
+		<p>
 			As such, the following TLDs also contain apex records, but they're merely
 			informational and don't point to real servers:
-		</p> -->
-		<p>
+		</p>
+<!-- 		<p>
 			As of the last check, no TLDs had informational apex records. This is what
 			they usually look like:
-		</p>
+		</p> -->
 		<section class="table-wrapper">
 			<table>
 				<thead>
@@ -243,16 +273,19 @@
 				</thead>
 				<tbody>
 					<tr>
-						<td>.example</td>
+						<td>
+							<span dir="rtl">.عرب</span><br>
+							<small style="white-space:nowrap">(.xn--ngbrx)</small>
+						</td>
 						<td><a href="http://127.0.53.53/">127.0.53.53</a></td>
-						<td>your-dns-needs-immediate-attention.example</td>
+						<td>your-dns-needs-immediate-attention.xn--ngbrx</td>
 						<td>"Your DNS configuration needs immediate attention see
 							<a href="https://icann.org/namecollision">https://icann.org/namecollision</a>"</td>
 					</tr>
 				</tbody>
 			</table>
 		</section>
-		<p class="timestamp">Last checked: 31 Mar. 2025.</p>
+		<p class="timestamp">Last checked: 12 May 2025.</p>
 		<h3>
 			<a id="aaaaa-historical" href="#aaaaa-historical">#</a>
 			Historical
@@ -504,6 +537,15 @@
 						<td>Aug. 2021</td>
 					</tr>
 					<tr>
+						<td>Mauritania</td>
+						<td>
+							<span dir="rtl">.موريتانيا</span><br>
+							<small style="white-space:nowrap">(.xn--mgbah1a3hjkrd)</small>
+						</td>
+						<td>mail.nic.mr</td>
+						<td>May 2025</td>
+					</tr>
+					<tr>
 						<td>Trinidad and Tobago</td>
 						<td>.tt</td>
 						<td>aspmx.l.google.com<br>
@@ -519,7 +561,7 @@
 				</tbody>
 			</table>
 		</section>
-		<p class="timestamp">Last checked: 31 Mar. 2025.</p>
+		<p class="timestamp">Last checked: 12 May 2025.</p>
 		<h3>
 			<a id="mx-historical" href="#mx-historical">#</a>
 			Historical
@@ -643,6 +685,22 @@
 		</section>
 	</main>
 	<footer>
+		<hr>
+		<h2>
+			<a id="updates" href="#updates">#</a>
+			Updates
+		</h2>
+		<dl>
+			<dt><strong>2025-05-12</strong></dt>
+			<dd>
+				A previous version of the pipeline used to check for dotless domains had
+				an oversight, and filtered for <code>[a-z]</code> instead of
+				<code>[a-z0-9\-]</code>. This meant it didn't detect dotless
+				<a href="https://en.wikipedia.org/wiki/Internationalized_domain_name">IDNs</a>!
+				This has been fixed. Thanks to <a href="https://github.com/MegaManSec">Joshua Rogers</a>
+				for bringing my attention to it!
+			</dd>
+		</dl>
 		<h2>
 			<a id="special-thanks" href="#special-thanks">#</a>
 			Special Thanks
@@ -706,7 +764,7 @@
 		</ol>
 		<p class="timestamp">
 			Made with ♥&#xFE0E;<!--&#xFE0E;[Ref] stackoverflow.com/a/38452396/4824627-->
-			by Matheus Avellar<br>Last updated on Mar. 2025
+			by Matheus Avellar<br>Last updated on May 2025
 		</p>
 	</footer>
 	<!-- ######### -->
