Combed through archive.today for older dates

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		<p>
 			These are TLDs that, as of the last check, contain apex A or AAAA records.
 			Many have had those records since the IETF compiled a list in 2013;<a href="#ref5">[5]</a>
-			other dates indicate an observation by me, directly.
+			unless referenced, other dates indicate an observation by me, directly.
 		</p>
 		<section class="table-wrapper">
 			<table>
@@ -152,7 +152,9 @@
 								<dd>SSH open</dd>
 							</dl>
 						</td>
-						<td>May 2025</td>
+						<td>
+							Sep. 2022<sup><a title="archive.today" href="https://archive.ph/3UijO">[at]</a></sup>
+						</td>
 					</tr>
 					<tr>
 						<td>Tokelau (NZ)</td>
@@ -293,7 +295,7 @@
 		<p>
 			These are TLDs that previously had apex records, but no longer do so. Much
 			of it comes from a list compiled by the IETF in 2013;<a href="#ref5">[5]</a>
-			other dates indicate an observation by me, directly.
+			unless referenced, other dates indicate an observation by me, directly.
 		</p>
 		<section class="table-wrapper">
 			<table>
@@ -320,7 +322,10 @@
 						<td>http://ai/</td>
 						<td><a href="http://209.59.119.34/">209.59.119.34</a></td>
 						<td>mail.offshore.ai</td>
-						<td>2013—<br>Jan. 2024</td>
+						<td>
+							2013—<br>
+							Oct. 2024<sup><a title="archive.today" href="https://archive.ph/oTdVx">[at]</a></sup>
+						</td>
 					</tr>
 					<tr>
 						<td>Bahrain</td>
@@ -338,7 +343,10 @@
 						<td><a href="http://193.163.102.24/">193.163.102.24</a><br>
 							<a href="http://[2a01:630:0:40:b1a:b1a:2011:1]">[2a01:630:0:40:b1a:b1a:2011:1]</a></td>
 						<td>No</td>
-						<td>2013</td>
+						<td>
+							2013—<br>
+							Mar. 2016<sup><a title="archive.today" href="https://archive.ph/HBRfK">[at]</a></sup>
+						</td>
 					</tr>
 					<tr>
 						<td>Guernsey (UK)</td>
@@ -402,7 +410,10 @@
 						<td>http://to/</td>
 						<td><a href="http://216.74.32.107/">216.74.32.107</a></td>
 						<td>No</td>
-						<td>2013</td>
+						<td>
+							2013—<br>
+							Jan. 2017<sup><a title="archive.today" href="https://archive.ph/rFmdC">[at]</a></sup>
+						</td>
 					</tr>
 					<tr>
 						<td>Vatican</td>
