--- a/index.html
+++ b/index.html
@@ -134,28 +134,6 @@
 						</td>
 						<td>2013</td>
 					</tr>
-					<tr class="no-content">
-						<td>Mongolia</td>
-						<td>.мон<br><small>(.xn--l1acc)</small></td>
-						<td><a href="https://мон./">https://мон./</a></td>
-						<td>
-							<a href="http://180.149.98.234/">180.149.98.234</a><br>
-							<a href="http://202.131.4.60/">202.131.4.60</a><br>
-							<a href="http://218.100.84.27/">218.100.84.27</a>
-						</td>
-						<td>No</td>
-						<td>
-							<dl>
-								<dt>HTTP/S</dt>
-								<dd>Apache 2 Test Page</dd>
-								<dt>Other</dt>
-								<dd>SSH open</dd>
-							</dl>
-						</td>
-						<td>
-							Sep. 2022<sup><a title="archive.today" href="https://archive.ph/3UijO">[at]</a></sup>
-						</td>
-					</tr>
 					<tr>
 						<td>Tokelau (NZ)</td>
 						<td>.tk</td>
@@ -205,7 +183,7 @@
 				</tbody>
 			</table>
 		</section>
-		<p class="timestamp">Last checked: 12 May 2025.</p>
+		<p class="timestamp">Last checked: 20 June 2025.</p>
 		<h4>
 			<a id="aaaaa-screenshots" href="#aaaaa-screenshots">#</a>
 			Screenshots
@@ -217,15 +195,6 @@
 				</a>
 				<figcaption data-llb-caption="visible">
 					<b>cm:22</b> as of 21 Aug. 2023.
-				</figcaption>
-			</figure>
-			<figure>
-				<a href="./screenshots/2025-05-12_xn-l1acc.png" data-llb-src="href" data-llb-gallery>
-					<img src="./screenshots/2025-05-12_xn-l1acc.png">
-				</a>
-				<figcaption data-llb-caption="visible">
-					<b>https://мон/</b> as of 12 May 2025.<br>
-					(Apache 2 Test Page)
 				</figcaption>
 			</figure>
 			<figure>
@@ -287,7 +256,7 @@
 				</tbody>
 			</table>
 		</section>
-		<p class="timestamp">Last checked: 12 May 2025.</p>
+		<p class="timestamp">Last checked: 20 June 2025.</p>
 		<h3>
 			<a id="aaaaa-historical" href="#aaaaa-historical">#</a>
 			Historical
@@ -381,6 +350,20 @@
 						<td>2013</td>
 					</tr>
 					<tr>
+						<td>Mongolia</td>
+						<td>.мон<br><small>(.xn--l1acc)</small></td>
+						<td>https://мон./</td>
+						<td>
+							<a href="http://180.149.98.234/">180.149.98.234</a><br>
+							<a href="http://202.131.4.60/">202.131.4.60</a><br>
+							<a href="http://218.100.84.27/">218.100.84.27</a>
+						</td>
+						<td>No</td>
+						<td>
+							Sep. 2022<sup><a title="archive.today" href="https://archive.ph/3UijO">[at]</a></sup>—<br>May 2025
+						</td>
+					</tr>
+					<tr>
 						<td>Pitcairn Islands (UK)</td>
 						<td>.pn</td>
 						<td>http://pn/</td>
@@ -463,6 +446,15 @@
 				</a>
 				<figcaption data-llb-caption="visible">
 					<b>http://bh/</b> on 13 Aug. 2021.
+				</figcaption>
+			</figure>
+			<figure>
+				<a href="./screenshots/2025-05-12_xn-l1acc.png" data-llb-src="href">
+					<img src="./screenshots/2025-05-12_xn-l1acc.png">
+				</a>
+				<figcaption data-llb-caption="visible">
+					<b>https://мон/</b> as of 12 May 2025.<br>
+					(Apache 2 Test Page)
 				</figcaption>
 			</figure>
 			<figure>
@@ -572,7 +564,7 @@
 				</tbody>
 			</table>
 		</section>
-		<p class="timestamp">Last checked: 12 May 2025.</p>
+		<p class="timestamp">Last checked: 20 June 2025.</p>
 		<h3>
 			<a id="mx-historical" href="#mx-historical">#</a>
 			Historical
@@ -789,7 +781,7 @@
 		</ol>
 		<p class="timestamp">
 			Made with ♥&#xFE0E;<!--&#xFE0E;[Ref] stackoverflow.com/a/38452396/4824627-->
-			by Matheus Avellar<br>Last updated on May 2025
+			by Matheus Avellar<br>Last updated on June 2025
 		</p>
 	</footer>
 	<!-- ######### -->
