--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 				</tbody>
 			</table>
 		</section>
-		<p class="timestamp">Last checked: 16 August 2025.</p>
+		<p class="timestamp">Last checked: 14 September 2025.</p>
 		<h4>
 			<a id="aaaaa-screenshots" href="#aaaaa-screenshots">#</a>
 			Screenshots
@@ -256,7 +256,7 @@
 				</tbody>
 			</table>
 		</section>
-		<p class="timestamp">Last checked: 16 August 2025.</p>
+		<p class="timestamp">Last checked: 14 September 2025.</p>
 		<h3>
 			<a id="aaaaa-historical" href="#aaaaa-historical">#</a>
 			Historical
@@ -561,10 +561,16 @@
 						<td>mr.kolo.net</td>
 						<td>2013</td>
 					</tr>
+					<tr>
+						<td>Vatican</td>
+						<td>.va</td>
+						<td>.</td>
+						<td>Sep. 2025</td>
+					</tr>
 				</tbody>
 			</table>
 		</section>
-		<p class="timestamp">Last checked: 16 August 2025.</p>
+		<p class="timestamp">Last checked: 14 September 2025.</p>
 		<h3>
 			<a id="mx-historical" href="#mx-historical">#</a>
 			Historical
@@ -781,7 +787,7 @@
 		</ol>
 		<p class="timestamp">
 			Made with ♥&#xFE0E;<!--&#xFE0E;[Ref] stackoverflow.com/a/38452396/4824627-->
-			by Matheus Avellar<br>Last updated on August 2025
+			by Matheus Avellar<br>Last updated on September 2025
 		</p>
 	</footer>
 	<!-- ######### -->
