new .as mx; link gh repo

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 				</tbody>
 			</table>
 		</section>
-		<p class="timestamp">Last checked: 14 September 2025.</p>
+		<p class="timestamp">Last checked: 1 December 2025.</p>
 		<h4>
 			<a id="aaaaa-screenshots" href="#aaaaa-screenshots">#</a>
 			Screenshots
@@ -256,7 +256,7 @@
 				</tbody>
 			</table>
 		</section>
-		<p class="timestamp">Last checked: 14 September 2025.</p>
+		<p class="timestamp">Last checked: 1 December 2025.</p>
 		<h3>
 			<a id="aaaaa-historical" href="#aaaaa-historical">#</a>
 			Historical
@@ -428,7 +428,7 @@
 					<img src="./screenshots/2022-10-23_ai.png">
 				</a>
 				<figcaption data-llb-caption="visible">
-					<b>http://ai/</b> as of 23 Oct. 2022.
+					<b>http://ai/</b> on 23 Oct. 2022.
 				</figcaption>
 			</figure>
 			<figure>
@@ -453,7 +453,7 @@
 					<img src="./screenshots/2025-05-12_xn-l1acc.png">
 				</a>
 				<figcaption data-llb-caption="visible">
-					<b>https://мон/</b> as of 12 May 2025.<br>
+					<b>https://мон/</b> on 12 May 2025.<br>
 					(Apache 2 Test Page)
 				</figcaption>
 			</figure>
@@ -491,6 +491,12 @@
 					<th>First seen on</th>
 				</thead>
 				<tbody class="td-last-center">
+					<tr>
+						<td>American Samoa</td>
+						<td>.as</td>
+						<td>no.mx.nic.as</td>
+						<td>Dec. 2025</td>
+					</tr>
 					<tr>
 						<td>Central African Republic</td>
 						<td>.cf</td>
@@ -570,7 +576,7 @@
 				</tbody>
 			</table>
 		</section>
-		<p class="timestamp">Last checked: 14 September 2025.</p>
+		<p class="timestamp">Last checked: 1 December 2025.</p>
 		<h3>
 			<a id="mx-historical" href="#mx-historical">#</a>
 			Historical
@@ -724,6 +730,12 @@
 				removed, so all is well now.
 			</dd>
 		</dl>
+		<p>
+			Though this website is manually updated, there is automation in place to
+			ensure I'm warned of dotless domain changes. If you'd like, you can check
+			<a href="https://github.com/MatheusAvellar/dotless">the repository</a>
+			where that happens!
+		</p>
 		<h2>
 			<a id="special-thanks" href="#special-thanks">#</a>
 			Special Thanks
@@ -787,7 +799,7 @@
 		</ol>
 		<p class="timestamp">
 			Made with ♥&#xFE0E;<!--&#xFE0E;[Ref] stackoverflow.com/a/38452396/4824627-->
-			by Matheus Avellar<br>Last updated on September 2025
+			by Matheus Avellar<br>Last updated on December 2025
 		</p>
 	</footer>
 	<!-- ######### -->
